# sfPhysics

./: CMakeLists.txt  Makefile
cmake/: Config.cmake  Macros.cmake
cmake/Modules/: FindSfPhysics.cmake
examples/: CMakeLists.txt
examples/CollisionDetection/: CMakeLists.txt  main.cpp
examples/GeometryUnitTest/: CMakeLists.txt  main.cpp
examples/PhysicsLoop/: CMakeLists.txt  main.cpp
examples/flightsim/: CMakeLists.txt  Main.cpp  Sim.cpp  Sim.hpp
examples/moonlander/: CMakeLists.txt  Moonlander.cpp  main.cpp
examples/rocket/: CMakeLists.txt  Rocket.cpp  rocket
examples/tower/: CMakeLists.txt  Tower.cpp  tower.cpp
include/sfPhysics/: Collision.hpp  CollisionEvent.hpp  Debugdraw.hpp  Draw.hpp  Electronic.hpp  Environment.hpp  Geometry.hpp  Mechanic.hpp  Mechanics.hpp  Objects.hpp  Physicable.hpp  Physics.hpp  Polygon.hpp  PolygonManager.hpp  SAT.hpp  SFML.hpp  SFML_Graphics.hpp  Settings.hpp  System.hpp  Vector2.hpp  Vector2.inl
include/sfPhysics/Collision/: Collision.hpp  CollisionEvent.hpp
include/sfPhysics/Debugdraw/: DebugRenderer.hpp  EventRenderer.hpp  ObjectRenderer.hpp
include/sfPhysics/Draw/: Drawable.hpp  Drawbody.hpp  GeometryDrawer.hpp  Scene.hpp  ShapeDrawer.hpp
include/sfPhysics/Electronic/: CircuitManager.hpp  Conductor.hpp  Electricity.hpp  ElectronicComponent.hpp  Lamp.hpp
include/sfPhysics/Geometry/: angle.hpp  box.hpp  box.inl  circle.hpp  line.hpp  line.inl  minmax.hpp  minmax.inl  plane.hpp  polygon.hpp  rectangle.hpp  shape.hpp  transformation.hpp  triangle.hpp  triangle.inl  trigonometry.hpp  vector2.hpp  vector2.inl
include/sfPhysics/Mechanic/: Collision.hpp  CollisionEvent.hpp  CollisionManager.hpp  Contact.hpp  Environment.hpp  Hinge.hpp  Linkable.hpp  ObjectList.hpp  Objects.hpp  Physicable.hpp  SeparatingAxis.hpp  Shape.hpp  ShapeManager.hpp  Spring.hpp
include/sfPhysics/Mechanics/: Body.hpp  Collider.hpp  Contact.hpp
include/sfPhysics/SFML_System/: Vector2.hpp
include/sfPhysics/System/: Box.hpp  Box.inl  Collision.hpp  CollisionEvent.hpp  CollisionManager.hpp  Contact.hpp  Environment.hpp  Hinge.hpp  Line.hpp  Line.inl  Linkable.hpp  Math.hpp  Math.inl  ObjectList.hpp  Objects.hpp  Physicable.hpp  Rect.hpp  Rect.inl  SAT.hpp  SeparatingAxis.hpp  Shape.hpp  ShapeManager.hpp  Spring.hpp  Triangle.hpp  Vector2.hpp  Vector2.inl
include/sfphysics/: Draw.hpp  Geometry.hpp  Mechanics.hpp  SFML_Graphics  SFML_System.hpp  draw.hpp  draw_module  electronic_module  geometry_module  mechanic_module  mechanics.hpp  settings  settings.hpp
include/sfphysics/SFML_System/: Rect.hpp
include/sfphysics/draw/: Drawable.hpp  Drawbody.hpp  GeometryDrawer.hpp  Scene.hpp  ShapeDrawer.hpp  bodydraw  drawable.hpp  drawbody.hpp  drawsettings  scene.hpp
include/sfphysics/geometry/: angle  angle.hpp  angle.inl  box.hpp  circle  circle.hpp  form  line  line.hpp  line.inl  math  math.inl  matrix  matrix.inl  minmax.hpp  plane  plane.hpp  polygon  polygon.hpp  rectangle  rectangle.hpp  shape.hpp  transformation.hpp  transformation.inl  triangle  triangle.hpp  triangle.inl  trigonometry  trigonometry.hpp  trigonometry.inl  vector2  vector2.hpp  vector2.inl
include/sfphysics/mechanic/: body  environment  properties  properties.inl
include/sfphysics/mechanics/: Body.hpp  Collider.hpp  Contact.hpp  MaterialDef.hpp  body.hpp  materialdef.hpp  shape
lib/: libsfphysics.so.1.0
src/: Collision.cpp  Collision.hpp  CollisionEvent.cpp  CollisionEvent.hpp  Environment.cpp  Environment.hpp  Objects.cpp  Objects.hpp  Physicable.cpp  Physicable.hpp  Physics.hpp  Polygon.cpp  Polygon.hpp  SAT.cpp  SAT.hpp  SFML_Graphics.hpp  Vector2.hpp  Vector2.inl  main.cpp
src/sfPhysics/: CMakeLists.txt  Collision.cpp  Environment.cpp  Objects.cpp  Physicable.cpp  Polygon.cpp  PolygonManager.cpp  SAT.cpp
src/sfPhysics/Collision/: Collision.cpp
src/sfPhysics/Debugdraw/: CMakeLists.txt  ObjectRenderer.cpp
src/sfPhysics/Draw/: CMakeLists.txt  Drawbody.cpp  GeometryDrawer.cpp  Scene.cpp  ShapeDrawer.cpp
src/sfPhysics/Electronic/: CircuitManager.cpp  Conductor.cpp  ElectronicComponent.cpp  Lamp.cpp
src/sfPhysics/Geometry/: CMakeLists.txt  circle.cpp  plane.cpp  polygon.cpp  rectangle.cpp
src/sfPhysics/Mechanic/: CMakeLists.txt  Collision.cpp  CollisionManager.cpp  Contact.cpp  Environment.cpp  Hinge.cpp  Objects.cpp  Physicable.cpp  SeparatingAxis.cpp  Shape.cpp  ShapeManager.cpp  Spring.cpp
src/sfPhysics/Mechanics/: Body.cpp  CMakeLists.txt  Collider.cpp  Contact.cpp  MaterialDef.cpp
src/sfPhysics/System/: CMakeLists.txt  Collision.cpp  CollisionManager.cpp  Contact.cpp  Environment.cpp  Objects.cpp  Physicable.cpp  SAT.cpp  SeparatingAxis.cpp  Shape.cpp  ShapeManager.cpp  Spring.cpp
src/sfphysics/: CMakeLists.txt
src/sfphysics/draw/: CMakeLists.txt  Drawbody.cpp  GeometryDrawer.cpp  Scene.cpp  ShapeDrawer.cpp  bodydraw.cpp  drawbody.cpp  scene.cpp
src/sfphysics/electronic/: CMakeLists.txt
src/sfphysics/geometry/: CMakeLists.txt  circle.cpp  plane.cpp  polygon.cpp  rectangle.cpp
src/sfphysics/mechanic/: CMakeLists.txt  body.cpp  environment.cpp  shape.cpp
src/sfphysics/mechanics/: Body.cpp  CMakeLists.txt  Collider.cpp  Contact.cpp  MaterialDef.cpp  body.cpp  materialdef.cpp
